# hackable

./: .dockerignore  README.md  docker-compose.yml  file.py
hackable_api/: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
hackable_api/alembic/: env.py
hackable_api/alembic/versions/: 24592cec4f3d_initial_migration.py  25108fff015d_added_created_at_to_articles.py  ac73539f9674_added_created_at_to_comments.py  c0aed99c0183_initial.py
hackable_api/api/: dependencies.py  router.py  views.py
hackable_api/api/docs/: views.py
hackable_api/api/middlewares/: jwt_middleware.py
hackable_api/api/user/: schemas.py  views.py
hackable_api/api/users/: schemas.py  views.py
hackable_api/api/v1/: schemas.py  views.py
hackable_api/app/: application.py  run_app.py  settings.py
hackable_api/app/api/: dependencies.py  router.py
hackable_api/app/api/users/: schemas.py  (+1 more)
hackable_api/app/app/: application.py  run_app.py  settings.py
hackable_api/app/db/: database.db  db_driver.py
hackable_api/app/services/: articles_comments_service.py  articles_service.py  auth_service.py  users_service.py
hackable_api/db/: database.db  db_driver.py
hackable_api/db/models/: article.py  articles.py  articles_comments.py  users.py
hackable_api/db/repositories/: article_repository.py  articles_comments_repository.py  articles_repository.py  users_repository.py
hackable_api/interfaces/driver_interfaces/: db_driver_interface.py
hackable_api/services/: article_service.py  articles_comments_service.py  articles_service.py  auth_service.py  users_service.py
(+104 files in other folders)
