[tool.poetry]
name = "hackable_api"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "./README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
pydantic = "^2"
pydantic-settings = "^2"
ujson = "^5.10.0"
sqlalchemy = "^2.0.38"
sqlmodel = "^0.0.22"
alembic = "^1.14.1"
bcrypt = "^4.2.1"
python-jose = "^3.4.0"
aiosqlite = "^0.21.0"
greenlet = "^3.1.1"
python-multipart = "^0.0.20"
asyncpg = "^0.30.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.25.3"
pytest-mock = "3.14.0"
flake8 = "~7.0.0"
black = "^24.4.2"
autoflake = "^1.6.1"
pyyaml = "^6.0.2"
requests = "^2.32.3"


[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
